# magi-trade

./: .env.example  .gitignore  README.md  TASKS.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py  scheduler.py
backend/app/api/: history.py  logs.py  position.py  settings.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  market.py  trading.py
backend/app/services/: data_collector.py  indicators.py
backend/app/services/agents/: __init__.py  agent_runner.py  graph.py  prompts.py  state.py
backend/app/services/llm/: __init__.py  base.py  factory.py  mock.py
backend/app/services/llm/cli/: base_cli.py  claude_code.py  codex.py  copilot.py  gemini.py
backend/db/init/: 00_init.sql
backend/tests/: conftest.py  test_agents.py  test_data_collector.py  test_indicators.py  test_llm_client.py
docs/: README.md  ai-agent-design.md  architecture.md  overview.md  risk-management.md  setup.md  tech-stack.md
frontend/: .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/logs/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/layout/: Sidebar.tsx  TopBar.tsx
frontend/src/components/ui/: Badge.tsx  GlowCard.tsx  Spinner.tsx
frontend/src/lib/: api.ts  types.ts
